Difference between containers and pods. Updated webcrawler to point to db location but cannot store permanently yet

--- a/api-deployment.yaml
+++ b/api-deployment.yaml
@@ -15,11 +15,9 @@ spec:
         app: synergychat-api
     spec:
       containers:
-        - image: bootdotdev/synergychat-api:latest
-          name: synergychat-api
-          env:
-            - name: API_PORT
-              valueFrom:
-                configMapKeyRef:
-                  name: synergychat-api-configmap
-                  key: API_PORT
+      - image: bootdotdev/synergychat-api:latest
+        name: synergychat-api
+        envFrom:
+          - configMapRef:
+              name: synergychat-api-configmap
+
