--- a/synergychat-crawler.yaml
+++ b/synergychat-crawler.yaml
@@ -15,9 +15,15 @@ spec:
       labels:
         app: synergychat-crawler
     spec:
+      volumes:
+        - name: cache-volume
+          emptyDir: {}
       containers:
         - image: bootdotdev/synergychat-crawler:latest
-          name: synergychat-crawler
+          name: synergychat-crawler-1
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
           env:
             - name: CRAWLER_PORT
               valueFrom:
@@ -29,3 +35,50 @@ spec:
                 configMapKeyRef:
                   name: synergychat-crawler-configmap
                   key: CRAWLER_KEYWORDS
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+        - image: bootdotdev/synergychat-crawler:latest
+          name: synergychat-crawler-2
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT2
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
+        - image: bootdotdev/synergychat-crawler:latest
+          name: synergychat-crawler-3
+          volumeMounts:
+            - name: cache-volume
+              mountPath: /cache
+          env:
+            - name: CRAWLER_PORT
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_PORT3
+            - name: CRAWLER_KEYWORDS
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_KEYWORDS
+            - name: CRAWLER_DB_PATH
+              valueFrom:
+                configMapKeyRef:
+                  name: synergychat-crawler-configmap
+                  key: CRAWLER_DB_PATH
